--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css" />
     </header> 
         <body>
-            <h1>Javi's Coffee Shop<img src="\Users\Javier Abes\Downloads\Logo.png" alt="Logo" style="float:left;width:42px;height:42px;"></h1>
+            <h1>Digital Espresso<img src="\Users\Javier Abes\Downloads\Logo.png" alt="Logo" style="float:left;width:42px;height:42px;"></h1>
             <nav class="nav" style="background-color:#a53b35;">
                 <ul>
                     <li><a href="Index.html" title="Home">Home</a></li>
@@ -15,7 +15,7 @@
              </nav>          
         <h5><u>About Us</u></h5>
              
-         <p>Javi's Coffee Shop has been serving hot coffee since it was established in 2003.</p>
+         <p>Digital Espresso has been serving hot coffee since it was established in 2019.</p>
            
         </body>
     <footer>
