--- a/Intro to HTML Lab (Complete).html
+++ b/Intro to HTML Lab (Complete).html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css" />
     </header> 
         <body>
-            <h1>Javi's Coffee Shop<img src="\Users\Javier Abes\Downloads\Logo.png" alt="Logo" style="float:left;width:42px;height:42px;"></h1>
+            <h1>Digital Espresso<img src="\Users\Javier Abes\Downloads\Logo.png" alt="Logo" style="float:left;width:42px;height:42px;"></h1>
             <nav class="nav" style="background-color:#a53b35;">
                 <ul>
                     <li><a href="Index.html" title="Home">Home</a></li>
@@ -15,7 +15,7 @@
              </nav>          
         <p>Craving for a Hot Cup of Coffee?</p>
         <p>Well, look no further!</p>
-        <p>Javi's Coffee Shop serves all the Coffee you need!</p>
+        <p>Digital Espresso serves all the Coffee you need!</p>
         <p>Take a look at our <a href="products.html" title="Menu">Menu</a> to learn more!</p>
            
         </body>
